config/kubernetes/debug.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: debug-handler
spec:
  containers:
    - name: fedora
      image: fedora:43
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          cpu: 2
          memory: 3072Mi
        requests:
          cpu: 1
          memory: 3072Mi
      command: ["sleep", "infinity"]

      env: []
        # - name: KEYSTORE_PASSWORD
        #   valueFrom:
        #     secretKeyRef:
        #       name: keystore-secrets
        #       key: keystore-password

      volumeMounts: []
        # - name: mypvc
        #   mountPath: /inbound
        #     subPath: data.txt

  volumes: []
    # - name: mypvc
    #   persistentVolumeClaim:
    #     claimName: << claim >>
    # - name: keystore-files
    #   secret:
    #     secretName: keystore-files
