config/kubernetes/lb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  type: LoadBalancer
  ports:
    - name: http-ui
      protocol: TCP
      port: 443
      targetPort: 5900
