config/kubernetes/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: myapp-route
  namespace: default
spec:
  entryPoints:
    - web
    - websecure

  routes:
    - match: Host('myapp.apps.caspersbox.com')
      kind: Rule
      services:
        - name: myapp-service
          port: 443
          scheme: https
          serversTransport: insecure-skip-verify
          passHostHeader: true

  # TLS configuration (optional for HTTPS)
  # tls:
  #   secretName: app-example-com-tls
